--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,9 @@ SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_SERVICE_KEY=your-service-role-key
 SUPABASE_ANON_KEY=your-anon-key
 OPENAI_API_KEY=your-openai-key
-# From Supabase: Project Settings → API → JWT Settings → JWT Secret (optional; if unset, tokens are verified via Supabase Auth API)
-JWT_SECRET=your-jwt-secret-from-supabase
+# Firebase Auth: path to service account JSON key file (Project Settings → Service accounts)
+# GOOGLE_APPLICATION_CREDENTIALS=path/to/firebase-service-account.json
+# Or paste the JSON as a single line (no newlines):
+# FIREBASE_SERVICE_ACCOUNT_JSON={"type":"service_account",...}
 # Comma-separated allowed origins (default: http://localhost:4200)
 # CORS_ORIGINS=http://localhost:4200,https://your-domain.com
